[gd_scene load_steps=4 format=3 uid="uid://bspsfky6q46sm"]

[ext_resource type="Script" uid="uid://dganp8jebex4u" path="res://Interactables/Dungeon/Scripts/pressure_plate.gd" id="1_e0nng"]
[ext_resource type="Texture2D" uid="uid://c0em5tfsjemb4" path="res://Interactables/Dungeon/dungeon_props.png" id="2_qht4m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4513p"]
size = Vector2(8, 8)

[node name="PressurePlate" type="Node2D"]
script = ExtResource("1_e0nng")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("2_qht4m")
region_enabled = true
region_rect = Rect2(416, 64, 32, 32)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_4513p")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
